# simba

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  compute_mces_experiment.py  compute_molecular_pairs.py  compute_molecular_pairs_mces.py  compute_molecular_pairs_unique_smiles.py  environment.yml  environment_cleaned.yml  generate_examples_simba_paper.py  get_only_massspecgym.py  get_spectra_in_ming_data.py  inference.py  inference_exhaustive.py  inference_multitasking.py  inference_ordinal_classification.py  inspect_mces20_ed.py  inspect_ordinal_dataset.py  merge_datasets.py  merge_ed_mces_generated_data.py  merge_edit_distance_mces_20.py  merged_computed_edit_distance_data.py  ms2deepscore_analog_discovery.py  pyproject.toml  rebalance_high_similarity_nature.py  remove_janssen.py  requeriments_molecular_pairs.txt  sanity_check_compare_uc_data_generated.py  sanity_check_ed_mces_generation_20250123.py  script_all_matched_mces.slurm.sh  script_all_matched_mces_bash.slurm.sh  script_flexible.slurm.sh  script_inference.slurm.sh  (+25 more)
.github/workflows/: docs.yml  lint.yml  tests.yml
configs/: config.yaml
configs/analog_discovery/: default.yaml  fast_dev.yaml
configs/data/: default.yaml
configs/inference/: default.yaml  fast_dev.yaml
configs/model/: simba_default.yaml
configs/preprocessing/: default.yaml  fast_dev.yaml
configs/training/: default.yaml  fast_dev.yaml
data/: casmi2022.mgf  ion_modes_with_adducts_with_M.csv
docs/: Makefile  make.bat
docs/src/: api.md  conf.py  index.md  install.md  quickstart.md
inference_scripts/: generate_examples_simba_paper_local.py  inference.py  inference_exhaustive.py  inference_multitasking.py  inference_multitasking_molecular_fingerprint.py  inference_ordinal_classification.py  ms2deepscore_analog_discovery.py
legacy/: config.py  plotting.py
legacy/inference_scripts/: inference.py  (+3 more)
legacy_scripts/: clean_dataset.py  compute_fingerprints.py  compute_mces_experiment.py  compute_unique_combinations.py  count_adducts.py  evaluate_model_outputs.py  export_spectrums.py  get_spectra_in_ming_data.py  how_many_pairs.py  inspect_molecular_pairs.py  inspect_spectra.py  load_janssen_data.py  merge_datasets.py  merge_split_folders.py  profiling.py  rebalance_high_similarity_nature.py  remove_identity_pairs.py  remove_janssen.py  replicate_test_pairs.py  save_resampled_data.py  save_uniform_data.py  script_split_folder.py  test_fingerprints.py
notebooks/: debugging_new_results_model.ipynb  inspect_spectra.ipynb  interpretability_shap.ipynb  redundancy_for_interpretability.ipynb  run_tensorflow_on_cpu.ipynb  simba_errors.ipynb
preprocessing_scripts/: compute_molecular_pairs_mces.py  compute_molecular_pairs_unique_smiles.py  final_generation_data.py  get_only_massspecgym.py  inspect_mces20_ed.py  inspect_ordinal_dataset.py  merge_ed_mces_generated_data.py  merge_edit_distance_mces_20_v2.py  merged_computed_edit_distance_data.py  sanity_check_compare_uc_data_generated.py  sanity_check_ed_mces_generation_20250123.py  sanity_check_mces20.py
python_scripts/: compute_molecular_pairs_unique_smiles.py  compute_unique_combinations.py  count_adducts.py  evaluate_model_outputs.py  export_spectrums.py  fix_dataset.py  how_many_pairs.py  inspect_molecular_pairs.py  inspect_spectra.py  merge_datasets.py  remove_janssen.py  replicate_test_pairs.py  save_resampled_data.py  save_uniform_data.py
simba/: __init__.py  __version__.py  adducts_cleaning.py  chem_utils.py  cli.py  config.py  deterministic_similarity.py  load_data.py  loader_saver.py  logger_setup.py  losscallback.py  matchms_utils.py  ml_model.py  modified_cosine.py  molecular_pairs_set.py  molecule_pairs_opt.py  ms2deepscore_comparison.py  murcko_scaffold.py  nist_loader.py  parser.py  plot.py  plotting.py  preprocessing_utils.py  preprocessor.py  sanity_checks.py  similarity.py  similarity_metric.py  spectrum_ext.py  tanimoto.py  train_utils.py  utils.py  weight_sampling.py
slurm_scripts/: script_all_matched_mces_bash.slurm.sh  script_compute_additional_pairs.sh  script_compute_unique_combinations.slurm.sh  script_fingerprint_model.sh  script_flexible.slurm.sh  script_generate_examples_simba.sh  script_get_ony_massspecgym.sh  script_globus.sh  script_inference.slurm.sh  script_inference_multitasking.sh  script_inference_multitasking_fingerprint.sh  script_inference_ordinal_mces.slurm.sh  script_mces20_ed_merging.slurm.sh  script_pipeline.slurm.sh  script_preprocessing.slurm.sh  script_preprocessing_ed_mces.sh  script_preprocessing_ed_parallel.sh  script_preprocessing_mces.slurm.sh  script_replicate_test.slurm.sh  script_several_gumbel_softmax.sh  script_transformers.slurm.sh  script_transformers_exhaustive_mces.slurm.sh  script_transformers_multitasking.sh  script_transformers_multitasking_fingerprint.sh  script_transformers_multitasking_masking.sh  script_transformers_multitasking_molecular_fingerprint.sh  script_transformers_multitasking_only_massspecgym.sh  script_transformers_multitasking_resampling.sh  script_transformers_ordinal_mces.slurm.sh  script_transformers_pretrain.slurm.sh
src/: config.py  deterministic_similarity.py  load_data.py  loader_saver.py  losscallback.py  modified_cosine.py  molecular_pairs_set.py  molecule_pairs_opt.py  ms2deepscore_comparison.py  parser.py  plotting.py  preprocessing_utils.py  preprocessor.py  sanity_checks.py  similarity_metric.py  spec2vec_comparison.py  spectrum_ext.py  tanimoto.py  train_utils.py  weight_sampling.py
tests/: conftest.py  test_config_utils.py
training_scripts/: final_training.py  training.py  training_exhaustive.py  training_exhaustive_mces.py  training_exhaustive_mces_classification.py  training_multitasking.py  training_multitasking_contrastive.py  training_multitasking_generated_data.py  training_multitasking_generated_data_resampling.py  training_multitasking_molecular_fingerprint.py  training_multitasking_pretrain.py  training_ordinal_classification.py  training_with_low_range_pretraining.py
(+303 files in other folders)
