[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simba-ms"
version = "0.1.0"
description = "SIMBA: Spectral Identification of Molecule Bio-Analogues - Transformer-based neural network for MS/MS structural similarity prediction"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = {text = "MIT"}
authors = [
    {name = "Bittremieux Lab", email = "wout.bittremieux@uantwerpen.be"},
]
keywords = [
    "metabolomics",
    "mass-spectrometry",
    "structural-similarity",
    "transformer",
    "deep-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    # Core scientific computing
    "numpy>=1.24.0,<1.25.0",
    "scipy>=1.10.0,<1.11.0",
    "pandas>=2.0.0,<2.2.0",
    "polars>=0.20.0,<0.21.0",

    # Deep learning
    "torch>=2.3.0,<2.4.0",
    "torchvision>=0.18.0,<0.19.0",
    "pytorch-lightning>=2.1.0,<2.2.0",
    "lightning>=2.1.0,<2.2.0",
    "torchmetrics>=1.3.0,<1.4.0",

    # Chemistry
    "rdkit>=2023.9.0",
    "matchms>=0.24.0,<0.25.0",
    "spectrum-utils>=0.4.0,<0.5.0",
    "pyteomics>=4.6.0,<5.0.0",
    "depthcharge-ms @ git+https://github.com/wfondrie/depthcharge.git@bd2861f",
    "myopic-mces>=1.0.0,<2.0.0",

    # Data processing
    "h5py>=3.10.0,<4.0.0",
    "pyarrow>=15.0.0,<16.0.0",
    "datasets>=2.20.0,<3.0.0",

    # ML utilities
    "scikit-learn>=1.4.0,<2.0.0",
    "einops>=0.7.0,<0.8.0",

    # Visualization
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.13.0,<0.14.0",

    # Utilities
    "click>=8.1.0,<9.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "requests>=2.32.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pre-commit>=3.5.0",
]

notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.28.0",
    "ipywidgets>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/bittremieux-lab/simba"
Repository = "https://github.com/bittremieux-lab/simba"
"Bug Tracker" = "https://github.com/bittremieux-lab/simba/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["simba*"]
exclude = ["tests*", "legacy_scripts*", "notebooks*", "docs*"]

# ============================================================================
# Ruff Configuration
# ============================================================================

[tool.ruff]
target-version = "py311"
line-length = 88

exclude = [
    ".git",
    ".github",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    # Exclude existing code from linting for now
    "legacy_scripts",
    "slurm_scripts",
    "notebooks",
    "data",
    "docs",
    "simba",  # Exclude main package for now
    "preprocessing_scripts",
    "training_scripts",
    "inference_scripts",
    "training_multitasking_*.py",
    "get_only_massspecgym.py",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Function calls in argument defaults
    "N803",   # Argument name should be lowercase (scientific naming)
    "N806",   # Variable should be lowercase (scientific naming)
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"**/scripts/**/*.py" = ["T201"]
"preprocessing_scripts/**/*.py" = ["T201"]
"training_scripts/**/*.py" = ["T201"]
"inference_scripts/**/*.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["simba"]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
